# minimalistic-raytracer

./: .gitignore  CMakeLists.txt
Source/: main.cpp
Source/Private/App/: Window.cpp
Source/Private/Image/: Image.cpp  PPMHandler.cpp
Source/Private/Math/: BoundingSphere.cpp  Constants.inl  Hittable.cpp  Numerical.inl  Ray.inl  Utils.inl  Vector.inl
Source/Public/App/: Window.h
Source/Public/Graphics/: Renderable.hpp
Source/Public/Image/: Image.hpp  PPMHandler.hpp
Source/Public/Math/: BoundingSphere.hpp  Constants.hpp  Hittable.hpp  Numerical.hpp  Ray.hpp  Utils.hpp  Vector.hpp
